--- a/config/locales/devise.views.ja.yml
+++ b/config/locales/devise.views.ja.yml
@@ -40,12 +40,12 @@ ja:
         send_me_reset_password_instructions: "パスワードの再設定方法を送信する"
     registrations:
       edit:
-        are_you_sure: "本当に良いですか?"
-        cancel_my_account: "アカウント削除"
+        are_you_sure: "本当によろしいですか？"
+        cancel_my_account: "アカウントの削除"
         currently_waiting_confirmation_for_email: "%{email} の確認待ち"
         leave_blank_if_you_don_t_want_to_change_it: "空欄のままなら変更しません"
         title: "%{resource}編集"
-        unhappy: "気に入りません"
+        unhappy: "アカウントを削除しますか"
         update: "更新"
         we_need_your_current_password_to_confirm_your_changes: "変更を反映するには現在のパスワードを入力してください"
       new:
